fix: remove index from IMF data CSV export

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,15 +766,8 @@
     "countries_df['Type'] = 'Country'\n",
     "\n",
     "combined_df = pd.concat([regions_df, countries_df], ignore_index=True)\n",
-    "combined_df.to_csv('data/processed/IMF Data.csv')"
+    "combined_df.to_csv('data/processed/IMF Data.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
