--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "regions_df = regions_df.rename(columns={'Country Name': 'Region Name'})"
+    "# regions_df = regions_df.rename(columns={'Country Name': 'Region Name'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Region Name</th>\n",
+       "      <th>Country Name</th>\n",
        "      <th>Series Name</th>\n",
        "      <th>1990</th>\n",
        "      <th>1991</th>\n",
@@ -630,7 +630,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                       Region Name            Series Name          1990  \\\n",
+       "                      Country Name            Series Name          1990  \\\n",
        "0      Africa Eastern and Southern  GDP growth (annual %)   0.182030899   \n",
        "1       Africa Western and Central  GDP growth (annual %)   5.773827878   \n",
        "2           Caribbean small states  GDP growth (annual %)  -0.872625886   \n",
@@ -697,7 +697,7 @@
        "[14 rows x 36 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "array(['GDP growth (annual %)'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "array(['GDP growth (annual %)'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,15 +758,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "regions_df['Type'] = 'Region'\n",
     "countries_df['Type'] = 'Country'\n",
     "\n",
-    "combined_df = pd.concat([regions_df, countries_df], ignore_index=True)\n",
-    "combined_df.to_csv('data/processed/IMF Data.csv', index=False)"
+    "# Combine dataframes vertically\n",
+    "\n",
+    "combined_df = pd.concat([regions_df, countries_df], ignore_index=True, axis=0)"
    ]
   }
  ],
