feat: update data processing pipelines and notebook paths
This commit introduces the following changes:

- Refactored the data processing scripts to use relative file paths based on the script's location.
- Updated the file paths in the main notebook and analytical groups notebook to use the relative paths.
- Renamed the `preprocess.py` and `preprocess union.py` scripts to `process_countries_regions.py` and `process_all.py` respectively to better reflect their purpose.
- Consolidated the processing of regions, countries, and analytical groups data into a single `process_all.py` script.

--- a/notebooks/main_notebook_analytical_groups.ipynb
+++ b/notebooks/main_notebook_analytical_groups.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "analytical_group_df = pd.read_csv('data/raw/IMF Data analytical-groups.csv')"
+    "analytical_group_df = pd.read_csv('../data/raw/IMF Data analytical-groups.csv')"
    ]
   },
   {
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "analytical_group_df.to_csv('data/processed/IMF Data analytical-groups.csv', index=False)"
+    "analytical_group_df.to_csv('../data/processed/IMF Data analytical-groups.csv', index=False)"
    ]
   }
  ],
