--- a/notebooks/main_notebook.ipynb
+++ b/notebooks/main_notebook.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "regions_df = pd.read_csv('data/raw/IMF Data regions.csv')\n",
-    "countries_df = pd.read_csv('data/raw/IMF Data countries.csv')"
+    "regions_df = pd.read_csv('../data/raw/IMF Data regions.csv')\n",
+    "countries_df = pd.read_csv('../data/raw/IMF Data countries.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "[14 rows x 36 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "array(['GDP growth (annual %)'], dtype=object)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "array(['GDP growth (annual %)'], dtype=object)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
